CCA: Fix #document-corner-move-desc visible bug
Bug: b:203028477
Test: Manually
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/3282873
Commit-Queue: Inker Kuo <inker@chromium.org>
Commit-Queue: Wei Lee <wtlee@chromium.org>
Auto-Submit: Inker Kuo <inker@chromium.org>
Cr-Commit-Position: refs/heads/main@{#942064}

--- a/ash/webui/camera_app_ui/resources/css/mode/scan.css
+++ b/ash/webui/camera_app_ui/resources/css/mode/scan.css
@@ -347,9 +347,9 @@ body.enable-scan-barcode .barcode-scan-box {
   stroke: var(--blue-500);
 }
 
-#document-drag-point-desc {
+#document-corner-move-desc {
   position: absolute;
-  visibility: none;
+  visibility: hidden;
 }
 
 #view-crop-document .review-image .dot {
